asteria/core/tests/errors/elaboration_errors/repeated_term_constructor_type_parameter.asteriacore
data Prod (a : Type) (b : Type) where
   | Pair {c : Type} {c : Type} (x : c) (y : c) : Test$Prod(c,c)
   ;;
